tests/preprocessor_message/010_error.c.expect
./tests/preprocessor_message/010_error.c:1:6: #error: foo
1 | #error foo
         ^
